force-app/main/default/objects/Channel__c/fields/Annual_Business_Revenue_Unit_10k_USD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Business_Revenue_Unit_10k_USD__c</fullName>
    <description>渠道该品类年度销售额（万美元）</description>
    <inlineHelpText>Annual sales of the product line in the channel</inlineHelpText>
    <label>Annual Business Revenue (Unit: 10k USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>