force-app/main/default/objects/Channel__c/fields/BigData_Channel__c.field-meta.xml
<CustomField>
    <fullName>BigData_Channel__c</fullName>
    <label>BigData Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>