force-app/main/default/objects/Channel__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <description>渠道编码，系统自动生成，同一个渠道名称只有一个渠道编码，规则：CH+5位数字，如CH00000（已废弃）</description>
    <displayFormat>CH{00000}</displayFormat>
    <label>Channel Code(Backend usage)</label>
    <type>AutoNumber</type>
</CustomField>