force-app/main/default/objects/Channel__c/fields/Channel_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code_Formula__c</fullName>
    <description>从Channel_item__c 表中取Channel_Code__c的值，自动生成</description>
    <label>Channel Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>