force-app/main/default/objects/Channel__c/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>纯线上</fullName>
            </value>
            <value>
                <fullName>纯线下</fullName>
            </value>
            <value>
                <fullName>线上+线下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>