force-app/main/default/objects/Channel__c/fields/Cooperating_Customer_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Cooperating_Customer_Entity_Name__c</fullName>
    <description>合作主体名称（品牌直营：同渠道名称；代理合作：填写代理名称），需校验和客户管理名称保持一致</description>
    <inlineHelpText>Cooperting Customer Entity Name. It includes brand direct operation and agent cooperation. For brand direct operation, it&apos;s the same as channel name; for agent cooperation, it should fill in the agent name.</inlineHelpText>
    <label>Cooperating  Customer Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>