force-app/main/default/objects/Channel__c/fields/Cooperating_Customer_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Cooperating_Customer_SAP_Code__c</fullName>
    <description>合作主体SAP</description>
    <inlineHelpText>Cooperating customer SAP code. For brand direct operation, it should fill in the SAP code of the channel; for agent cooperation, it should fill in the SAP code of the agent customer.</inlineHelpText>
    <label>Cooperating  Customer SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>