force-app/main/default/objects/Channel__c/fields/Cooperating_Method__c.field-meta.xml
<CustomField>
    <fullName>Cooperating_Method__c</fullName>
    <description>合作模式，对于已合作或计划开发的渠道：若与海信直接合作，此处请填写“品牌直营”；若通过代理合作，此处请填写“代理合作”。</description>
    <inlineHelpText>It&apos;s used for cooperated channel or planning to develop channel. For channel that cooperated directly with Hisense, it should fill in brand direct operation; for channel that cooperated with Hisense through agent, it should fill in agent cooperation.</inlineHelpText>
    <label>Cooperating Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>品牌直营</fullName>
            </value>
            <value>
                <fullName>代理合作</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>