force-app/main/default/objects/Channel__c/fields/Cooperating_Status__c.field-meta.xml
<CustomField>
    <fullName>Cooperating_Status__c</fullName>
    <description>合作状态，分为已合作、未合作、计划开发和已停止合作四种状态。本年度有开发计划的选择“计划开发”，本年度无开发计划的选择“未合作”。</description>
    <inlineHelpText>There are three types of status: cooperated, uncooperated, and plan to develop. Fill in “plan to develop” if you have a development plan for the current year, or “uncooperated” if you do not have a development plan for the current year.</inlineHelpText>
    <label>Cooperating Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已合作</fullName>
            </value>
            <value>
                <fullName>计划开发</fullName>
            </value>
            <value>
                <fullName>未合作</fullName>
            </value>
            <value>
                <fullName>已停止合作</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>