force-app/main/default/objects/Channel__c/fields/Cooperating_Time__c.field-meta.xml
<CustomField>
    <fullName>Cooperating_Time__c</fullName>
    <description>实际合作时间，具体到月份，需校验不能填未来时间（即时间小于等于导入当天所在月份）。文本格式yyyymm</description>
    <inlineHelpText>The actual time of cooperation, specific to the month, need to check can not be filled in the future time (i.e. the time is less than or equal to the import day in the month). Text format: yyyymm</inlineHelpText>
    <label>Cooperating Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>