force-app/main/default/objects/Channel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>销售国家</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>