force-app/main/default/objects/Channel__c/fields/Hisense_Value_Share__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Value_Share__c</fullName>
    <description>海信在渠道内份额（填写上一年年度数据）</description>
    <inlineHelpText>Hisense&apos;s share in the channel (fill in the previous year&apos;s annual data)</inlineHelpText>
    <label>Hisense Value Share</label>
    <length>255</length>
    <type>Text</type>
</CustomField>