force-app/main/default/objects/Channel__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>Product_Line__c + &apos;_&apos; +  SBU__c + &apos;_&apos; + Country__c + &apos;_&apos; +  Channel_Code_Formula__c</formula>
    <label>Index</label>
    <type>Text</type>
</CustomField>