force-app/main/default/objects/Channel__c/fields/Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Market_Share__c</fullName>
    <description>渠道所在国分品类的市场份额，填写上一年年度数据</description>
    <inlineHelpText>Market share by product line in the country where the channel is located, with data for the previous year.</inlineHelpText>
    <label>Market Share</label>
    <length>255</length>
    <type>Text</type>
</CustomField>