force-app/main/default/objects/Channel__c/fields/Number_of_New_Store_Entering_Plan_2024__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Store_Entering_Plan_2024__c</fullName>
    <description>2024年计划新进店数</description>
    <inlineHelpText>Number of stores planned to enter for 2024</inlineHelpText>
    <label>Number of New Store Entering Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>