force-app/main/default/objects/Channel__c/fields/Number_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores__c</fullName>
    <description>渠道门店数，填写上一年年度数据</description>
    <inlineHelpText>Number of channel stores, fill in the previous year&apos;s annual data</inlineHelpText>
    <label>Number of Stores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>