force-app/main/default/objects/Channel__c/fields/Planned_Cooperating_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Cooperating_Time__c</fullName>
    <description>计划合作时间，只有“计划开发”状态的渠道需填写，具体到月份</description>
    <inlineHelpText>only “plan to develop” status of the channel to fill in, specific to the month</inlineHelpText>
    <label>Planned Cooperating Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>