force-app/main/default/objects/Channel__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>产品线</description>
    <label>Product Line</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>