force-app/main/default/objects/Channel__c/fields/RPA_Channel__c.field-meta.xml
<CustomField>
    <fullName>RPA_Channel__c</fullName>
    <label>RPA Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>