force-app/main/default/objects/Channel__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <description>销售单元，匹配信数区组维表中的grp_zh（其他大区）和sub_zh（欧洲大区）</description>
    <label>SBU</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>