force-app/main/default/objects/Channel__c/fields/SBU_Code__c.field-meta.xml
<CustomField>
    <fullName>SBU_Code__c</fullName>
    <description>销售单元编码，通过销售单元匹配信数区组维表中的sub_zh字段获取sub</description>
    <inlineHelpText>It acquires field sub by matching field sub_zh from HiData</inlineHelpText>
    <label>SBU Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>