force-app/main/default/objects/Channel__c/fields/Statistical_Year__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Year__c</fullName>
    <description>统计年份，指更新渠道的年份（每年更新一次渠道）</description>
    <inlineHelpText>Statistical year, the year in which the channels were updated (channels are updated annually)</inlineHelpText>
    <label>Statistical Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>