force-app/main/default/objects/Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Region__c</columns>
    <columns>SBU__c</columns>
    <columns>Country__c</columns>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>Channel_Code__c</columns>
    <columns>Cooperating_Status__c</columns>
    <columns>BigData_Channel__c</columns>
    <columns>RPA_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>